NFS Ganesha global stats are now written into shm to be displayed at runtime
Allocating a shared memory in nfs_main to store the global stats. These
global stats are written by Ganesha and can be read by a client program
display_stats.
display_stats binary is created at path support/display_stats. It does not
take any arguments as of now. It displays the Ganesha global stats as they
happen every second.

Change-Id: Idf318d7d6a5c1e660e0a97f8106a69c0b83a3197
Signed-off-by: Sriram Patil <spsrirampatil@gmail.com>

--- a/src/support/CMakeLists.txt
+++ b/src/support/CMakeLists.txt
@@ -50,6 +50,19 @@ SET(support_STAT_SRCS
    export_mgr.c
 )
 
+SET(support_DISPLAY_STATS
+   display_stats.c
+)
+
+add_executable(display_stats
+  ${support_DISPLAY_STATS}
+  ${support_STATS_SRCS}
+)
+
+target_link_libraries(display_stats
+  ${DBUS_LIBRARIES}
+)
+
 if(ERROR_INJECTION)
   set(support_STAT_SRCS
     ${support_STAT_SRCS}
